@@ -337,6 +337,7 @@ Depends: ${perl:Depends}, ${misc:Depends},
  adduser,
  cron | cron-daemon | systemd-sysv,
  fonts-dejavu-core,
+ fonts-materialdesignicons-webfont,
  libdbd-sqlite3-perl,
  libfile-copy-recursive-perl,
  libhtml-template-perl,
